--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,33 @@
-# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
-cmake_minimum_required(VERSION 2.8.3)
-project(camera_aravis)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
-find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs image_transport camera_info_manager dynamic_reconfigure driver_base tf dynamic_reconfigure)
+cmake_minimum_required(VERSION 3.5)
+project(cpp_pubsub)
+
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(Aravis REQUIRED)
 find_package(GLIB2 REQUIRED)
 
-generate_dynamic_reconfigure_options(cfg/CameraAravisConfig.cfg)
-catkin_package(
-    DEPENDS Aravis GLIB2
-    CATKIN_DEPENDS roscpp sensor_msgs image_transport camera_info_manager dynamic_reconfigure driver_base tf
-    INCLUDE_DIRS
-    LIBRARIES
-)
-
-include_directories(cfg/cpp ${catkin_INCLUDE_DIRS} ${ARAVIS_INCLUDE_PATH} ${GLIB2_INCLUDE_DIRS})
-
-message(${ARAVIS_LIBRARY})
+#include_directories(${catkin_INCLUDE_DIRS} ${ARAVIS_INCLUDE_PATH} ${GLIB2_INCLUDE_DIRS})
+include_directories(${ARAVIS_INCLUDE_PATH} ${GLIB2_INCLUDE_DIRS})
 
 add_executable(camnode src/camnode.cpp)
+#add_executable(camnode src/camnode2_glib.cpp)
+ament_target_dependencies(camnode rclcpp std_msgs sensor_msgs)
 
-target_link_libraries(camnode ${catkin_LIBRARIES} ${ARAVIS_LIBRARY} glib-2.0 gmodule-2.0 gobject-2.0)
-add_dependencies(camnode ${PROJECT_NAME}_gencfg)
+install(TARGETS
+  camnode
+  DESTINATION lib/${PROJECT_NAME})
+
+target_link_libraries(camnode ${ARAVIS_LIBRARY} glib-2.0 gmodule-2.0 gobject-2.0)
+ament_package()
